--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
-Hello World
+
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>The Start Up Workshop </title>
+</head>
+
+<header>
+  <h1>The Start Up Workshop</h1>
+
+  <video width="800" height="600" controls>
+    <source src="images/MC2nd.mp4" type="video/mp4">
+  </video>
+</header>
+
+<body>
+    <h3>
+      <p>In the U.S. and places around the world are joining the maker movement going on currently! These spaces allow individuals, startups and even large corporations to create from idea to actual finished prototype product. The above video shows Parson's New School maker labin New York City. Even though many fab labs do not have all the equipment shown, most have at least one section similar equipment.
+      </p>
+    </h3>
+
+    <section>
+      <p>From garages, small independent membership based organizations, to non-profits, and government backed organiztions maker labs are opening. Listed below are some spaces across the U.S. locations.</p>
+    </section>
+
+  <div>
+    <strong>A list of Maker Spaces across the country</strong>
+  </div>
+
+  <section>
+    <div>
+    <table border="2">
+      <tr>
+        <th>New York, New York</th>
+        <th>Chicago, IL</th>
+        <th>Seattle, Washington</th>
+      </tr>
+
+      <tr>
+        <td>Fat Cat Labs</td>
+        <td>Pumping Station: One</td>
+        <td>Metrix Create Space</td>
+      </tr>
+
+      <tr>
+        <td><a href="https://www.fatcatfablab.org/">Fat Cat Fab Lab Website</a></td>
+        <td><a href="https://pumpingstationone.org/">Pumping Station: One Website</a></td>
+        <td><a href="http://www.metrixcreatespace.com/">Metrix Create Space Website</a></td>
+      </tr>
+
+    </table>
+    </div>
+  </section>
+
+    <div>
+      <nav><a href="tools.html">Whats inside a maker lab?</a></nav>
+    </div>
+
+  <div>
+    <p>To find maker spaces globally, check out Make Magazine
+    <a href="http://spaces.makerspace.com/directory/">makerspaces directory!</a></p>
+  </div>
+
+</body>
+</html>
+
+
+<!--
+the basic HTML structure elements found on every HTML page
+some content that mixes header and paragraph tags
+at least one image
+at least two block-level elements that give semantic meaning to content
+a table or form (you can submit to httpbin if you like, or to the other page of your site)
+a list
+-->
+
