--- a/tools.html
+++ b/tools.html
@@ -6,7 +6,7 @@
 
 <header>
 <h1>The Start Up Workshop</h1>
-<img src="images/skillscnc2017.jpg" alt="skillscnc2017" height="600" width="800" border="10">
+<img src="images/Skillscnc2017.jpg" alt="skillscnc2017" height="600" width="800" border="10">
 </header>
 
 <body>
