Add styles css links

--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
   <title>The Start Up Workshop </title>
+  <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 
 <header>
   <h1>The Start Up Workshop</h1>
-
-  <video width="800" height="600" controls>
-    <source src="images/MC2nd.mp4" type="video/mp4">
-  </video>
+    <nav class="menu">
+      <h2>Menu</h2>
+        <li><a href="tools.html">Tools</a></li>
+    </nav>
 </header>
 
 <body>
+
+  <br>
+  <video width="800" height="600" controls>
+      <source src="images/MC2nd.mp4" type="video/mp4">
+    </video>
+  </br>
+
     <h3>
       <p>In the U.S. and places around the world are joining the maker movement going on currently! These spaces allow individuals, startups and even large corporations to create from idea to actual finished prototype product. The above video shows Parson's New School maker labin New York City. Even though many fab labs do not have all the equipment shown, most have at least one section similar equipment.
       </p>
     </h3>
 
-    <section>
+    <section id="garages">
       <p>From garages, small independent membership based organizations, to non-profits, and government backed organiztions maker labs are opening. Listed below are some spaces across the U.S. locations.</p>
     </section>
 
@@ -59,19 +65,10 @@
 
   <div>
     <p>To find maker spaces globally, check out Make Magazine
-    <a href="http://spaces.makerspace.com/directory/">makerspaces directory!</a></p>
+    <a href="http://spaces.makerspace.com/directory/">Makerspaces directory!</a></p>
   </div>
 
 </body>
 </html>
 
-
-<!--
-the basic HTML structure elements found on every HTML page
-some content that mixes header and paragraph tags
-at least one image
-at least two block-level elements that give semantic meaning to content
-a table or form (you can submit to httpbin if you like, or to the other page of your site)
-a list
--->
 
